[package]
name = "packybara"
version = "0.30.0"
authors = ["jgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pkb"
path = "src/bin/main.rs"

[[bin]]
name = "pkb-setupdb"
path = "src/bin/setupdb.rs"

[dependencies]
tokio-postgres = "0.5.1"
tokio = "0.2.8"
levelspec = {git = "https://github.com/jlgerber/rust-lspec.git", tag="v0.7.0"}
strum = "0.17.1"
strum_macros = "0.17.1"
snafu = "0.6.1"
failure = "0.1.6"
structopt = "0.3.7"
prettytable-rs = "0.8.0"
log = "0.4.8"
env_logger = "0.7.1"
itertools = "0.8.2"
whoami = "0.7.0"
chrono = "0.4.10"

[dependencies.postgres]
version = "0.17.0"
features = ["with-chrono-0_4"]