[package]
name = "packybara"
version = "0.38.4"
authors = ["jgerber <jlgerber@gmail.com>"]
edition = "2018"


[dependencies]
simple_xml_serialize =  "0.2.3"
simple_xml_serialize_macro = { version = "0.2.1", features = ["process_options"] }
tokio-postgres = "0.5.2"
tokio = "0.2.11"
levelspec = {git = "https://github.com/jlgerber/rust-lspec.git", tag="v0.8.0"}
strum = "0.17.1"
strum_macros = "0.17.1"
snafu = "0.6.2"
failure = "0.1.6"
structopt = "0.3.9"
prettytable-rs = "0.8.0"
log = "0.4.8"
env_logger = "0.7.1"
itertools = "0.8.2"
whoami = "0.7.0"
chrono = "0.4.10"
 

[dependencies.postgres]
version = "0.17.1"
features = ["with-chrono-0_4"]