[package]
name = "packybara"
version = "0.59.0"
authors = ["jgerber <jlgerber@gmail.com>"]
edition = "2018"


[dependencies]
simple_xml_serialize =  "0.2.3"
simple_xml_serialize_macro = { version = "0.2.1", features = ["process_options"] }
#tokio-postgres = "0.5.3"
tokio = "0.2.13"
levelspec = {git = "https://github.com/jlgerber/rust-lspec.git", tag="v0.10.0"}
strum = "0.18.0"
strum_macros = "0.18.0"
snafu = "0.6.3"
failure = "0.1.7"
structopt = "0.3.12"
prettytable-rs = "0.8.0"
log = "0.4.8"
env_logger = "0.7.1"
itertools = "0.9.0"
whoami = "0.8.1"
chrono = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.24"
 

[dependencies.tokio-postgres]
#version = "0.17.2"
version="0.5.3"
features = ["with-chrono-0_4"]
